--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8" />
-    <title>App</title>
+  <meta charset="utf-8" />
+  <title>App</title>
 </head>
-
 <body>
-    <h1>{{ message }}</h1>
-    <h2>Какой то заголовок</h2>
-</body>
+<ul>
+  {{#each messages}}
+    <li>
+      {{#if this.author}}
+        {{this.author}}
+      {{else}}
+        Имени нет
+      {{/if}}
+      <h3>{{this.message}}</h3>
+    </li>
+  {{/each}}
 
+</ul>
+
+</body>
 </html>
